--- a/src/app.html
+++ b/src/app.html
@@ -4,10 +4,19 @@
     <meta charset="utf-8" />
     <link rel="icon" href="%sveltekit.assets%/favicon.ico" />
     <meta name="viewport" content="width=device-width" />
+    <style>
+      * {
+        margin: 0;
+        padding: 0;
+      }
+    </style>
+
     %sveltekit.head%
   </head>
 
   <body>
-    <div>%sveltekit.body%</div>
+    <div>
+      %sveltekit.body% 
+    </div>
   </body>
 </html>
