--- a/src/app.html
+++ b/src/app.html
@@ -4,6 +4,9 @@
     <meta charset="utf-8" />
     <link rel="icon" href="%sveltekit.assets%/favicon.ico" />
     <meta name="viewport" content="width=device-width" />
+    <title>
+      O.D.D. Invictus
+    </title>
     <style>
       * {
         margin: 0;
