--- a/src/app.html
+++ b/src/app.html
@@ -5,7 +5,7 @@
     <link rel="icon" href="%sveltekit.assets%/favicon.ico" />
     <meta name="viewport" content="width=device-width" />
     <title>
-      O.D.D. Invictus
+      Invictus Bier Systeem
     </title>
     <style>
       * {
