--- a/src/app.html
+++ b/src/app.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="dark">
   <head>
     <meta charset="utf-8" />
     <link rel="icon" href="%sveltekit.assets%/favicon.ico" />
@@ -18,7 +18,7 @@
   </head>
 
   <body>
-    <div>
+    <div class="">
       %sveltekit.body% 
     </div>
   </body>
