--- a/src/app.html
+++ b/src/app.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
-<html lang="en" class="dark">
+<html lang="en" class="light">
   <head>
+	<meta name="viewport" content="width=device-width, initial-scale=0.41, maximum-scale=1" />
     <meta charset="utf-8" />
     <link rel="icon" href="%sveltekit.assets%/favicon.ico" />
     <meta name="viewport" content="width=device-width" />
@@ -18,7 +19,7 @@
   </head>
 
   <body>
-    <div class="">
+    <div>
       %sveltekit.body% 
     </div>
   </body>
