semi normal layout and feut theme

--- a/src/app.html
+++ b/src/app.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" class="light">
   <head>
+	<link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/gh/pi0/clippyjs/assets/clippy.css">
 	<meta name="viewport" content="width=device-width, initial-scale=0.41, maximum-scale=1" />
     <meta charset="utf-8" />
     <link rel="icon" href="%sveltekit.assets%/favicon.ico" />
