Toggle color scheme now, on to hamburgers

--- a/src/app.html
+++ b/src/app.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" class="light">
+<html lang="en" class="dark">
   <head>
 	<link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/gh/pi0/clippyjs/assets/clippy.css">
 	<meta name="viewport" content="width=device-width, initial-scale=0.41, maximum-scale=1" />
