--- a/src/app.html
+++ b/src/app.html
@@ -7,7 +7,7 @@
     <link rel="icon" href="%sveltekit.assets%/favicon.ico" />
     <meta name="viewport" content="width=device-width" />
     <title>
-      Irritant Brakke Software
+      Invictus Bier Systeem
     </title>
     <style>
       * {
