feat: Add web manifest and icons

--- a/src/app.html
+++ b/src/app.html
@@ -4,6 +4,9 @@
 	  <meta name="viewport" content="width=device-width, initial-scale=0.41, maximum-scale=1" />
     <meta charset="utf-8" />
     <link rel="icon" href="%sveltekit.assets%/favicon.ico" />
+
+    <link rel="manifest" crossorigin="use-credentials" href="%sveltekit.assets%/manifest.json" />
+
     <meta name="viewport" content="width=device-width" />
     <title>
       Invictus Bier Systeem
