--- a/src/app.html
+++ b/src/app.html
@@ -4,6 +4,30 @@
 	  <meta name="viewport" content="width=device-width, initial-scale=0.41, maximum-scale=1" />
     <meta charset="utf-8" />
     <link rel="icon" href="%sveltekit.assets%/favicon.ico" />
+    <link rel="shortcut icon" href="%sveltekit.assets%/favicon.ico">
+    <link rel="icon" sizes="16x16 32x32 64x64" href="%sveltekit.assets%/favicon.ico">
+    <link rel="icon" type="image/png" sizes="512x512" href="%sveltekit.assets%/favicon-512.png">
+    <link rel="icon" type="image/png" sizes="384x384" href="%sveltekit.assets%/favicon-512.png">
+    <link rel="icon" type="image/png" sizes="196x196" href="%sveltekit.assets%/favicon-192.png">
+    <link rel="icon" type="image/png" sizes="160x160" href="%sveltekit.assets%/favicon-160.png">
+    <link rel="icon" type="image/png" sizes="96x96" href="%sveltekit.assets%/favicon-96.png">
+    <link rel="icon" type="image/png" sizes="64x64" href="%sveltekit.assets%/favicon-64.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="%sveltekit.assets%/favicon-32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="%sveltekit.assets%/favicon-16.png">
+    <link rel="apple-touch-icon" href="%sveltekit.assets%/favicon-57.png">
+    <link rel="apple-touch-icon" sizes="60x60" href="%sveltekit.assets%/favicon-60.png">
+    <link rel="apple-touch-icon" sizes="72x72" href="%sveltekit.assets%/favicon-72.png">
+    <link rel="apple-touch-icon" sizes="76x76" href="%sveltekit.assets%/favicon-76.png">
+    <link rel="apple-touch-icon" sizes="114x114" href="%sveltekit.assets%/favicon-114.png">
+    <link rel="apple-touch-icon" sizes="120x120" href="%sveltekit.assets%/favicon-120.png">
+    <link rel="apple-touch-icon" sizes="144x144" href="%sveltekit.assets%/favicon-144.png">
+    <link rel="apple-touch-icon" sizes="152x152" href="%sveltekit.assets%/favicon-152.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="%sveltekit.assets%/favicon-180.png">
+    <link rel="apple-touch-icon" sizes="384x384" href="%sveltekit.assets%/favicon-384.png">
+    <link rel="apple-touch-icon" sizes="512x512" href="%sveltekit.assets%/favicon-512.png">
+    <meta name="msapplication-TileColor" content="#8844ff">
+    <meta name="msapplication-TileImage" content="%sveltekit.assets%/favicon-512.png">
+    <meta name="msapplication-config" content="%sveltekit.assets%/browserconfig.xml">
 
     <link rel="manifest" crossorigin="use-credentials" href="%sveltekit.assets%/manifest.json" />
 
