Misc: Add profile-icon

--- a/src/app.html
+++ b/src/app.html
@@ -35,6 +35,9 @@
   <link rel="manifest" crossorigin="use-credentials" href="%sveltekit.assets%/manifest.json" />
 
   <meta name="viewport" content="width=device-width" />
+
+  <meta name="description" content="IBS is het websysteem voor alles Invictus!" />
+
   <title>
     Invictus Bier Systeem
   </title>
