--- a/src/app.html
+++ b/src/app.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="nl" class="light">
+<html lang="nl">
 
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=0.41, maximum-scale=1" />
