--- a/src/app.html
+++ b/src/app.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="nl">
 	<head>
 		<meta name="viewport" content="width=device-width, initial-scale=0.41, maximum-scale=1" />
